--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,13 +42,14 @@ li{
 
 li:hover{
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-    color:rgb(18, 94, 176);
-    border:1px solid black;
-    cursor:pointer;
+    color: rgb(18, 94, 176);
+    border: 1px solid black;
+    cursor: pointer;
     transition: all 0.2s;
 }
 .iconP{
-    width:50px;
+    width: 50px;
+    height: 50px;
 }
 
 
