--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,7 +30,8 @@ header{
     display: flex;
     flex-wrap: wrap;
     font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
+    font-family: 'Kaushan Script', cursive;
 }
 
 
@@ -48,8 +49,8 @@ li:hover{
     transition: all 0.2s;
 }
 .iconP{
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
 }
 
 
@@ -82,8 +83,8 @@ body{
 	gap: 20px;
 }
 
-.banner {
-	border-radius: 10px;
+.promos {
+	size: 50%;
 	text-align: center;
 	padding: 20px;
 	background-size: cover;
@@ -145,7 +146,23 @@ body{
 	display: flex;  
 }
 
+h3,.t3{
+    font-family: 'Dancing Script', cursive;
+    font-size: xx-large;
+    color: #01056cfb;
+    margin: 20px;
+}
 
+.contenedorForm{
+    width: 90%;
+	max-width: 1200px;
+	margin: auto;
+	padding: 40px 0;
+}
+
+.form{
+    font-family: cursive;
+}
 
 
 /*.excursion:hover{
