--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,10 +4,7 @@
     margin: 0;
     padding: 0;
 }
-body{
-background-color: white;
-color: black;
-}
+
 
 
 /*HEADER*/
@@ -60,6 +57,7 @@ li:hover{
 body{
     background-image: url("/img/body.png");
 }  
+
 .contenedor {
   
     width: 90%;
@@ -87,9 +85,9 @@ body{
 }
 
 .promos {
+    
     width:20%;
     padding: 30px;
-    
 
 
 	/* Grid */
@@ -112,7 +110,7 @@ body{
 
 }
 
-.excursion .textos {
+.excursion {
 	height: 100%;
 
 
@@ -131,7 +129,7 @@ body{
 	padding: 10px;
 	border: none;
 	border-radius: 100px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	cursor: pointer;
 }
 
@@ -152,6 +150,22 @@ h3,.t3{
     font-size: xx-large;
     color: #01056cfb;
     margin: 20px;
+}
+
+p{
+    font-family: 'Dancing Script', cursive;
+    font-weight: bold;
+    font-size: large;
+    color: rgb(28, 85, 199);
+    text-align: right;
+}
+
+.p1{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: lighter;
+    color: rgb(255, 0, 183);
+    background-color: gold;
+    text-align: center;
 }
 
 .contenedorForm{
