--- a/css/estilos.css
+++ b/css/estilos.css
@@ -71,9 +71,24 @@ body{
 	gap: 20px;
 }
 
+h2{
+    font-family:  'Ysabeau', sans-serif;
+    font-size: xx-large;
+    font-weight: 1500;
 
-.contenedor-video{
+}
+
+.p0{
+    font-family: 'Ysabeau', sans-serif;
+    font-size: larger;
+    color: black;
+    text-align: justify;
+    transition: cubic-bezier(0.19, 1, 0.22, 1);
+}
+.video{
+  position: relative;  
   margin-inline: 30%;
+  margin-left: 10px;
 }
 
 .contenedor-excursiones {
@@ -126,6 +141,13 @@ body{
 	overflow: hidden;
 	background-size: cover;
 	display: inline;  
+}
+
+.promos:hover{
+    box-sizing: initial;
+    background-color: #5d8aa8;
+    border: 2px solid white;
+    transition: all 0.2s;
 }
 
 h3,.t3{
@@ -194,13 +216,13 @@ footer{
     justify-content: center;
     align-items: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   
-
-
 }
 
 
-
+.p3{
+    font-family: 'Dancing Script', cursive;
+    font-size: 23px;
+}
 
 form{
     display: flex;
