--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,7 +20,7 @@ header{
 .navegation{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .Ulist{
@@ -41,7 +41,7 @@ li{
 li:hover{
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
     color: rgb(18, 94, 176);
-    border: 1px solid black;
+    border-radius: 20px;
     cursor: pointer;
     transition: all 0.2s;
 }
