--- a/css/estilos.css
+++ b/css/estilos.css
@@ -93,12 +93,26 @@ h2{
   margin-left: 10px;
 }
 
+.Ulist2{ 
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px;
+    justify-content: center;
+    font-weight: bold;
+    color: #3478a4;
+    font-size: large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+
 .contenedor-excursiones {
 
 	/* Grid */
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(2, 2fr);
 	gap: 20px;
+    margin: 20px;
 }
 
 .excursion:hover{
@@ -113,7 +127,7 @@ h2{
 	min-height: 200px;
 	font-weight: bold;
     margin: 10px;
-	padding: 20px;
+	padding: 10px;
 	position: relative;
 	overflow: hidden;
 	background-size: cover;
@@ -127,7 +141,7 @@ h2{
 }
 
 .boton {
-	background: #b5d7f2;
+	background: rgb(248, 207, 157);
 	display: block;
 	width: 100%;
 	font-weight: bold;
@@ -166,6 +180,12 @@ h3{
     margin: 0px;
 }
 
+.paq{
+    background-color: #c4ebf6;
+    border-radius: 10%;
+    color: #070601f5;
+}
+
 .t3{
     font-family: 'Dancing Script', cursive;
     font-size: xx-large;
@@ -175,9 +195,9 @@ h3{
 }
 
 p{
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
-    font-size: large;
+    font-size: medium;
     color: rgb(237, 239, 243);
     text-align: left;
 }
@@ -185,8 +205,8 @@ p{
 .p1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: lighter;
-    color: rgb(255, 0, 183);
-    background-color: gold;
+    color: rgb(76, 92, 136);
+    background-color: rgb(232, 201, 89);
     text-align: center;
 }
 
