--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,7 +57,7 @@ li:hover{
 
 
 body{
-    background-image: url("/img/body.png");
+    background-image: url("./img/body.png");
 }  
 
 .contenedor {
