--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,9 +27,8 @@ header{
     display: flex;
     flex-wrap: wrap;
     font-weight: bold;
-    font-size: x-large;
+    font-size: large;
     font-family: 'Kaushan Script', cursive;
-   
 }
 
 
@@ -57,7 +56,7 @@ li:hover{
 
 
 body{
-    background-image: url(/img/body.png);
+    background-image: url("/img/body.png");
 }  
 
 .contenedor {
@@ -88,9 +87,9 @@ h2{
 }
 
 .video{
-    position: relative;  
-    margin-inline: 30%;
-    margin-left: 10px;
+  position: relative;  
+  margin-inline: 30%;
+  margin-left: 10px;
 }
 
 .Ulist2{ 
@@ -162,7 +161,9 @@ h2{
 	position: relative;
 	overflow: hidden;
 	background-size: cover;
-	display: inline;  
+	display: inline;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 .promos:hover{
@@ -217,17 +218,11 @@ p{
 	padding: 40px 0;
 }
 
-#formContacto{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.form{
+    font-family: cursive;
 }
 
-#form-button{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: bold;
-    font-size: medium;
-    padding: 5px;
-    margin: 25px;
-}
+
 
 
 
