--- a/css/estilos.css
+++ b/css/estilos.css
@@ -88,6 +88,7 @@ h2{
 
 .video{
   position: relative;  
+  display: flex;
   margin-inline: 30%;
   margin-left: 10px;
 }
@@ -190,6 +191,7 @@ p{
 
 
 .promos{
+    display: flex;
     width: 600px;
 	min-height: 100px;
 	padding: 40px;
