--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,7 +56,7 @@ li:hover{
 
 
 body{
-    background-image: url("./img/TURISMO.png");
+    background-image: url("./img/body.png");
 }  
 
 .contenedor{
